[gd_scene load_steps=2 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 73.0
margin_top = 104.0
margin_right = 256.0
margin_bottom = 155.0
color = Color( 0, 0, 0, 1 )

[node name="Button" type="Button" parent="."]
margin_left = 81.0
margin_top = 184.0
margin_right = 252.0
margin_bottom = 237.0
text = "CLIQUE AQUI"

[node name="Label" type="Label" parent="Button"]
margin_left = 1.0
margin_top = -72.0
margin_right = 168.0
margin_bottom = -37.0

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 324.0
margin_top = 107.0
margin_right = 483.0
margin_bottom = 159.0
color = Color( 0, 0, 0, 1 )

[node name="Button2" type="Button" parent="."]
margin_left = 326.0
margin_top = 186.0
margin_right = 481.0
margin_bottom = 242.0
text = "CLIQUE AQUI"

[node name="Label" type="Label" parent="Button2"]
margin_left = 8.0
margin_top = -71.0
margin_right = 146.0
margin_bottom = -38.0

[node name="LineEdit" type="LineEdit" parent="Button2"]
margin_left = -4.0
margin_top = -127.0
margin_right = 159.0
margin_bottom = -94.0

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = 522.0
margin_top = 112.0
margin_right = 689.0
margin_bottom = 163.0
color = Color( 0, 0, 0, 1 )

[node name="Button3" type="Button" parent="."]
margin_left = 528.0
margin_top = 186.0
margin_right = 688.0
margin_bottom = 243.0
text = "CLIQUE AQUI"

[node name="Label" type="Label" parent="Button3"]
margin_left = 2.0
margin_top = -74.0
margin_right = 157.0
margin_bottom = -23.0

[node name="ColorRect4" type="ColorRect" parent="."]
margin_left = 731.0
margin_top = 110.0
margin_right = 880.0
margin_bottom = 161.0
color = Color( 0, 0, 0, 1 )

[node name="Button4" type="Button" parent="."]
margin_left = 733.0
margin_top = 185.0
margin_right = 879.0
margin_bottom = 243.0
text = "CLIQUE AQUI"

[node name="LineEdit" type="LineEdit" parent="Button4"]
margin_left = -1.0
margin_top = -135.0
margin_right = 147.0
margin_bottom = -91.0

[node name="Label" type="Label" parent="Button4"]
margin_left = 7.0
margin_top = -69.0
margin_right = 141.0
margin_bottom = -28.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
